<resources>
    <string name="app_name">saver</string>
    <string name="dash_board">Dashboard</string>
    <string name="doctors">Doctors</string>
    <string name="appointment">Appointments</string>
    <string name="schedule">Schedule</string>
    <string name="booking">Booking</string>
    <string name="calendar">Calendar</string>
    <string name="messages">Messages</string>
    <string name="today">Today</string>
    <string name="todays">Todays</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date">Date</string>
    <string name="start">Start Time</string>
    <string name="end">End Time</string>
    <string name="time">Time Zone</string>
    <string name="status">Status</string>
    <string name="booked">Booked By</string>
    <string name="today_pt_list">Today Patients List</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>