<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:id="@+id/patient_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textColor="@color/fragment_body_text_regular_color"
            android:textSize="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/patient_date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textColor="@color/fragment_body_text_regular_color"
            android:textSize="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/patient_start"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="true"
            android:textColor="@color/fragment_body_text_regular_color"
            android:textSize="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/patient_end"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textAllCaps="true"
            android:textColor="@color/fragment_body_text_regular_color"
            android:textSize="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/patient_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAllCaps="true"
            android:textColor="@color/fragment_body_text_regular_color"
            android:textSize="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/patient_status"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAllCaps="true"
            android:textColor="@color/fragment_body_text_regular_color"
            android:textSize="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/regular"/>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>