<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_bg_Color"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/appt_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/appt_title_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/appointment"
                            android:textAllCaps="true"
                            android:textColor="@color/fragment_body_text_bold_color"
                            android:textSize="15dp"
                            android:fontFamily="@font/bold"/>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_below="@+id/appt_title_lay"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/dotted_line"
                            android:textColor="@color/tab_select_text_color"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rect_solid_primary_bg"
                            android:paddingLeft="@dimen/_8sdp"
                            android:paddingRight="@dimen/_8sdp"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingBottom="@dimen/_4sdp"
                            android:text="+25%"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10sdp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="12"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_50sdp"
                            android:fontFamily="@font/bold"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/today"
                            android:textAllCaps="true"
                            android:textColor="@color/fragment_body_faded_text_color"
                            android:textSize="@dimen/_10sdp"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/time_slot_lay"
            android:layout_below="@id/appt_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/todays"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="(12 Appointments)"
                    android:textAllCaps="true"
                    android:textColor="@color/fragment_body_faded_text_color"
                    android:textSize="15dp"
                    android:fontFamily="@font/bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/today_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rect_border_primary_bg"
                    android:padding="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/todays"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/regular"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tomorrow_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/rect_border_primary_bg"
                    android:padding="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/tomorrow"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/regular"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rect_border_primary_bg"
                    android:padding="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/regular"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/ptlist_card_view"
            android:layout_below="@id/time_slot_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/ptlist_title_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/patient_list_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/today_pt_list"
                            android:textAllCaps="true"
                            android:textColor="@color/fragment_body_text_bold_color"
                            android:textSize="15dp"
                            android:fontFamily="@font/bold"/>

                    </LinearLayout>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/patient_list"
                    android:layout_below="@+id/ptlist_title_lay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:src="@drawable/dotted_line"
                    android:textColor="@color/tab_select_text_color"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>